# drim-lang

./: .gitignore  CMakeLists.txt  README.md  lexer.cpp  test.drim  test_bitwise.drim  test_conditionals.drim  test_conversion.drim  test_lexer.cpp  testing_everything.drim
Project Report/: .gitignore  .main.tex.swp  main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  main.xdv
code/demo/: 1.drim  2.drim  3.drim  4.drim  5.drim  6.drim
code/include/: AST.h  Lexer.h  Parser.h  Scope.h  Token.h  Utils.h
code/src/: Interpreter.cpp  Lexer.cpp  Main.cpp  Parser.cpp
code/testing_sources/: LexerTest.cpp  test_IO.drim  test_arrays.drim  test_bool.drim  test_conditionals.drim  test_conversion.drim  test_physics.drim  test_queue.drim  test_recursion.drim
doc/: final-report.tex  proposal-report.tex
docs/: final_report.tex
docs/final-report/: final_report.tex
include/: AST.h  DS.h  Interpreter.h  Lexer.h  Parser.h  Physics.h  Scope.h  Signal.h  Token.h  Utils.h  Value.h  ast.h  interpreter.h  lexer.h  lib_calls.h  library.h  parser.h
src/: DS.cpp  Interpreter.cpp  Lexer.cpp  Main.cpp  Parser.cpp  Physics.cpp  Utils.cpp
src/tests/: test_lexer.cpp  (+1 more)
test/: Lexer.cpp
testing_sources/: test_IO.drim  test_arrays.drim  test_arrays_strict_input_type_invalid.drim  test_arrays_strict_mixed_literal_invalid.drim  test_arrays_strict_uninitialized_ok.drim  test_arrays_strict_valid.drim  test_bitwise.drim  test_ds_int64.drim  test_functions.drim  test_interpolation.drim  test_loops.drim  test_multi_assign.drim  test_recursion.drim  test_scope.drim  testing_everything.drim
(+7 files in other folders)
